[project]
name = "utils-repl"
version = "0.1.0"
description = "A collection of REPL utilities for Python development."
authors = [
    {name = "Robert Portelli"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "utils_repl", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
